--- a/minting-dapp-vue/src/styles/main.scss
+++ b/minting-dapp-vue/src/styles/main.scss
@@ -19,6 +19,8 @@ body{
   background-color: #65059B!important;
   padding: 0!important;
   background-image: url(../assets/bcg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 h1, h2, h3, h4, h5, h6{
   font-family: "Headers";
